bare skeleton main content for html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       </div>
       <div class="identity">
         <p>Alert Sign</p>
-        <p>ProfilePic</p>
+        <image class="picture">ProfilePic</image>
         <p>Profile Settings</p>
       </div>
       <div class="welcome">
-        <image></image>
+        <image class="picture"></image>
         <p>Hi, there, <br /><br />Bader Muhssin `@BaddieMuh`</p>
       </div>
       <div class="buttons">
@@ -53,6 +53,73 @@
         <p>LogoName</p>
         <p class="logo">Logo</p>
         <p>LogoName</p>
+      </div>
+    </div>
+
+    <div class="mainContent">
+      <div class="projects">
+        <div class="project">
+          <p class="title">Article Title</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud...
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Article Title</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud...
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Article Title</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud...
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Article Title</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud...
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Article Title</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud...
+          </p>
+        </div>
+        <div class="project">
+          <p class="title">Article Title</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud...
+          </p>
+        </div>
+      </div>
+      <div class="announcements">
+        Announcements
+        <div class="card">
+          <p>Site Maintenance</p>
+          <p>Community Share Day</p>
+          <p>Updated Privacy Policy</p>
+        </div>
+      </div>
+      <div class="trending">
+        <image class="picture"></image>
+        <image class="picture"></image>
+        <image class="picture"></image>
+        <image class="picture"></image>
       </div>
     </div>
   </body>
