--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="container">
     <div class="header">
       <div class="searchBar">
         <p>Searchbar Logo</p>
@@ -58,6 +59,7 @@
 
     <div class="mainContent">
       <div class="projects">
+        <p>Your Projects</p>
         <div class="project">
           <p class="title">Article Title</p>
           <p>
