completed main project grid styling

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
     <div class="mainContent">
       <div class="projects">
-        <p>Your Projects</p>
+        <h2 class="projects-title">Your projects</h2>
+
         <div class="project">
           <p class="title">Article Title</p>
           <p>
@@ -118,6 +119,7 @@
         </div>
       </div>
       <div class="trending">
+        Trending
         <image class="picture"></image>
         <image class="picture"></image>
         <image class="picture"></image>
