added html file

--- a/index.html
+++ b/index.html
@@ -110,20 +110,22 @@
           </p>
         </div>
       </div>
-      <div class="announcements">
-        Announcements
-        <div class="card">
-          <p>Site Maintenance</p>
-          <p>Community Share Day</p>
-          <p>Updated Privacy Policy</p>
+      <div class="sideBar">
+        <div class="announcements">
+          Announcements
+          <div class="card">
+            <p>Site Maintenance</p>
+            <p>Community Share Day</p>
+            <p>Updated Privacy Policy</p>
+          </div>
         </div>
-      </div>
-      <div class="trending">
-        Trending
-        <image class="picture"></image>
-        <image class="picture"></image>
-        <image class="picture"></image>
-        <image class="picture"></image>
+        <div class="trending">
+          Trending
+          <image class="picture"></image>
+          <image class="picture"></image>
+          <image class="picture"></image>
+          <image class="picture"></image>
+        </div>
       </div>
     </div>
   </body>
