adjusted grid positioning on header sidebar and main content

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </div>
       <div class="sideBar">
         <div class="announcements">
-          Announcements
+          <h2 class="projects-title">Announcements</h2>
           <div class="card">
             <p>Site Maintenance</p>
             <p>Community Share Day</p>
@@ -120,11 +120,13 @@
           </div>
         </div>
         <div class="trending">
-          Trending
-          <image class="picture"></image>
-          <image class="picture"></image>
-          <image class="picture"></image>
-          <image class="picture"></image>
+          <h2 class="projects-title">Trending</h2>
+          <div class="profile">
+            <image class="picture"></image>
+            <image class="picture"></image>
+            <image class="picture"></image>
+            <image class="picture"></image>
+          </div>
         </div>
       </div>
     </div>
