adjusted sidebar gap positionings

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="sidebar">
-      <div class="DashBoard">
+      <div class="dashboard">
         <p class="dashboardLogo">Logo</p>
         <p>Dashboard</p>
       </div>
