--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/34d2b61520.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="container">
     <div class="header">
@@ -34,12 +38,12 @@
         <p>Dashboard</p>
       </div>
       <div class="firstHalf">
-        <p class="logo">Logo</p>
+        <img class="logo" src="icons/homeicon.png" />
+        <p>LogoName</p>
+        <img class="logo" src="icons/ProfileIcon.png" />
         <p>LogoName</p>
         <p class="logo">Logo</p>
-        <p>LogoName</p>
-        <p class="logo">Logo</p>
-        <p>LogoName</p>
+        <img class="logo" src="icons/messageicon.png" />
         <p class="logo">Logo</p>
         <p>LogoName</p>
         <p class="logo">Logo</p>
