added backupfiles due to bad git head

--- a/index.html
+++ b/index.html
@@ -32,32 +32,32 @@
       </div>
     </div>
 
-    <div class="sidebar">
+    <div class="leftSideBar">
       <div class="dashboard">
-        <p class="dashboardLogo">Logo</p>
+        <img class="companylogo" src="icons/hacker.gif" />
         <p>Dashboard</p>
       </div>
       <div class="firstHalf">
         <img class="logo" src="icons/homeicon.png" />
-        <p>LogoName</p>
+        <a href="#">Home</a>
         <img class="logo" src="icons/ProfileIcon.png" />
-        <p>LogoName</p>
-        <p class="logo">Logo</p>
+        <a href="#">Profile</a>
         <img class="logo" src="icons/messageicon.png" />
-        <p class="logo">Logo</p>
-        <p>LogoName</p>
-        <p class="logo">Logo</p>
-        <p>LogoName</p>
-        <p class="logo">Logo</p>
-        <p>LogoName</p>
+        <a href="#">Messages</a>
+        <img class="logo" src="icons/historyicon.png" />
+        <a href="#">History</a>
+        <img class="logo" src="icons/homeworkicon.png" />
+        <a href="#">Tasks</a>
+        <img class="logo" src="icons/communityicon.png" />
+        <a href="#">Community</a>
       </div>
       <div class="secondHalf">
-        <p class="logo">Logo</p>
-        <p>LogoName</p>
-        <p class="logo">Logo</p>
-        <p>LogoName</p>
-        <p class="logo">Logo</p>
-        <p>LogoName</p>
+        <img class="logo" src="icons/settingsicon.png" />
+        <a href="#">Settings</a>
+        <img class="logo" src="icons/supporticon.png" />
+        <a href="#">Support</a>
+        <img class="logo" src="icons/privacyicon.png" />
+        <a href="#">Privacy</a>
       </div>
     </div>
 
@@ -114,7 +114,7 @@
           </p>
         </div>
       </div>
-      <div class="sideBar">
+      <div class="rightSideBar">
         <div class="announcements">
           <h2 class="projects-title">Announcements</h2>
           <div class="card">
@@ -127,9 +127,23 @@
           <h2 class="projects-title">Trending</h2>
           <div class="profile">
             <image class="picture"></image>
+            <p>Name</p>
+            <p>Bio</p>
+          </div>
+          <div class="profile">
             <image class="picture"></image>
+            <p>Name</p>
+            <p>Bio</p>
+          </div>
+          <div class="profile">
             <image class="picture"></image>
+            <p>Name</p>
+            <p>Bio</p>
+          </div>
+          <div class="profile">
             <image class="picture"></image>
+            <p>Name</p>
+            <p>Bio</p>
           </div>
         </div>
       </div>
