added button and fixed rightsidebar styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <body class="container">
     <div class="header">
       <div class="searchBar">
-        <p>Searchbar Logo</p>
-        <p>Searchbar input</p>
+        <button class="searchButton" type="submit">
+          <i class="fa fa-search"></i>
+        </button>
+        <input type="text" placeholder="Search.." />
       </div>
       <div class="identity">
         <p>Alert Sign</p>
@@ -35,7 +37,7 @@
     <div class="leftSideBar">
       <div class="dashboard">
         <img class="companylogo" src="icons/hacker.gif" />
-        <p>Dashboard</p>
+        <p style="align-self: center">Dashboard</p>
       </div>
       <div class="firstHalf">
         <img class="logo" src="icons/homeicon.png" />
