applied white styling to trending + grid styling

--- a/index.html
+++ b/index.html
@@ -132,25 +132,27 @@
         </div>
         <div class="trending">
           <h2 class="projects-title">Trending</h2>
-          <div class="profile">
-            <image class="picture"></image>
-            <p>Name</p>
-            <p>Bio</p>
-          </div>
-          <div class="profile">
-            <image class="picture"></image>
-            <p>Name</p>
-            <p>Bio</p>
-          </div>
-          <div class="profile">
-            <image class="picture"></image>
-            <p>Name</p>
-            <p>Bio</p>
-          </div>
-          <div class="profile">
-            <image class="picture"></image>
-            <p>Name</p>
-            <p>Bio</p>
+          <div class="trendingInner">
+            <div class="profile">
+              <image class="picture"></image>
+              <p>Name</p>
+              <p>Bio</p>
+            </div>
+            <div class="profile">
+              <image class="picture"></image>
+              <p>Name</p>
+              <p>Bio</p>
+            </div>
+            <div class="profile">
+              <image class="picture"></image>
+              <p>Name</p>
+              <p>Bio</p>
+            </div>
+            <div class="profile">
+              <image class="picture"></image>
+              <p>Name</p>
+              <p>Bio</p>
+            </div>
           </div>
         </div>
       </div>
