messed around with button styling and added project card styling

--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
             <div class="card-inner">
               <p>Site Maintenance</p>
               <p>Community Share Day</p>
-              <p>Updated Privacy Policy</p>
+              <p>
+                Updated Privacy Policy <br /><br />
+                <a href="#">Read More</a>
+              </p>
             </div>
           </div>
         </div>
