added backup files; includes card adnimations and styling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,25 @@
       <div class="projects">
         <h2 class="projects-title">Your projects</h2>
 
-        <div class="project">
+        <div class="project project1">
+          <a href="https://abigjuicyburger.github.io/odin-recipes/">
+            <p class="title">Odin Recipes</p>
+            <p>
+              My very first project in the world of web development...ah the
+              good old days of using HTML and CSS, so much I can.....blah blah
+              blah......
+            </p>
+          </a>
+        </div>
+        <div class="project project2">
+          <p class="title">Landing Page</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud...
+          </p>
+        </div>
+        <div class="project project3">
           <p class="title">Article Title</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -78,7 +96,7 @@
             ad minim veniam, quis nostrud...
           </p>
         </div>
-        <div class="project">
+        <div class="project project4">
           <p class="title">Article Title</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -86,7 +104,7 @@
             ad minim veniam, quis nostrud...
           </p>
         </div>
-        <div class="project">
+        <div class="project project5">
           <p class="title">Article Title</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -94,23 +112,7 @@
             ad minim veniam, quis nostrud...
           </p>
         </div>
-        <div class="project">
-          <p class="title">Article Title</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud...
-          </p>
-        </div>
-        <div class="project">
-          <p class="title">Article Title</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud...
-          </p>
-        </div>
-        <div class="project">
+        <div class="project project6">
           <p class="title">Article Title</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -128,7 +130,11 @@
               <p>Community Share Day</p>
               <p>
                 Updated Privacy Policy <br /><br />
-                <a href="#">Read More</a>
+                <a
+                  href="
+                https://youtu.be/dQw4w9WgXcQ"
+                  >Read More</a
+                >
               </p>
             </div>
           </div>
