--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
       </div>
       <div class="firstHalf">
         <img class="logo" src="icons/homeicon.png" />
-        <a href="#">Home</a>
-        <img class="logo" src="icons/ProfileIcon.png" />
-        <a href="#">Profile</a>
+        <a href="https://abigjuicyburger.github.io/Admin-Dashboard">Home</a>
+        <img class="logo" src="icons/githublogo.svg" />
+        <a href="https://github.com/ABigJuicyBurger">
+          <span class="ocean-text"> Creator Profile</span>
+        </a>
         <img class="logo" src="icons/messageicon.png" />
         <a href="#">Messages</a>
         <img class="logo" src="icons/historyicon.png" />
@@ -80,45 +82,60 @@
             </p>
           </a>
         </div>
+
         <div class="project project2">
-          <p class="title">Landing Page</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud...
-          </p>
+          <a href="https://abigjuicyburger.github.io/landing-page/">
+            <p class="title">Landing Page</p>
+            <p>
+              My first stressful project playing around with Flexbox...until my
+              mentor came and showed me something magical....called Chrome
+              DevTools.....
+            </p>
+          </a>
         </div>
+
         <div class="project project3">
-          <p class="title">Article Title</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud...
-          </p>
+          <a href="https://abigjuicyburger.github.io/odin-recipes/">
+            <p class="title">Article Title</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+          </a>
         </div>
+
         <div class="project project4">
-          <p class="title">Article Title</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud...
-          </p>
+          <a href="https://abigjuicyburger.github.io/odin-recipes/">
+            <p class="title">Article Title</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+          </a>
         </div>
+
         <div class="project project5">
-          <p class="title">Article Title</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud...
-          </p>
+          <a href="https://abigjuicyburger.github.io/odin-recipes/">
+            <p class="title">Article Title</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+          </a>
         </div>
+
         <div class="project project6">
-          <p class="title">Article Title</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud...
-          </p>
+          <a href="https://abigjuicyburger.github.io/odin-recipes/">
+            <p class="title">Article Title</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+          </a>
         </div>
       </div>
       <div class="rightSideBar">
