adjusted trenidng photos

--- a/index.html
+++ b/index.html
@@ -161,24 +161,32 @@
           <h2 class="projects-title">Trending</h2>
           <div class="trendingInner">
             <div class="profile">
-              <image class="picture"></image>
-              <p>Name</p>
-              <p>Bio</p>
+              <image src="projectpics/trumpy.jpg" class="picture"></image>
+              <div class="profile-info">
+                <p class="profileName">Trump</p>
+                <p>Bio</p>
+              </div>
             </div>
             <div class="profile">
-              <image class="picture"></image>
-              <p>Name</p>
-              <p>Bio</p>
+              <image src="projectpics/biden.jpeg" class="picture"></image>
+              <div class="profile-info">
+                <p class="profileName">Biden</p>
+                <p>Bio</p>
+              </div>
             </div>
             <div class="profile">
-              <image class="picture"></image>
-              <p>Name</p>
-              <p>Bio</p>
+              <image src="projectpics/obamna.jpeg" class="picture"></image>
+              <div class="profile-info">
+                <p class="profileName">Obamna</p>
+                <p>Bio</p>
+              </div>
             </div>
             <div class="profile">
-              <image class="picture"></image>
-              <p>Name</p>
-              <p>Bio</p>
+              <image src="projectpics/kamala.jpeg" class="picture"></image>
+              <div class="profile-info">
+                <p class="profileName">Harris</p>
+                <p>"Do not come. Do not come"</p>
+              </div>
             </div>
           </div>
         </div>
