completed project and readded bios, adjusted grid on header and trending

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <input type="text" placeholder />
       </div>
       <div class="identity">
-        <p>Alert Sign</p>
-        <image class="picture">ProfilePic</image>
-        <p>Profile Settings</p>
+        <img class="bell" src="icons/bell.png" />
+        <img src="projectpics/profilepic.png" class="picture" />
+        <p>Bader Muhssin</p>
       </div>
       <div class="welcome">
-        <image class="picture"></image>
-        <p>Hi, there, <br /><br />Bader Muhssin `@BaddieMuh`</p>
+        <img src="projectpics/profilepic.png" class="picture" />
+        <p>Hi, there, <br /><br />Bader Muhssin (@BaddieMuh)</p>
       </div>
       <div class="buttons">
         <button class="new">New</button>
@@ -164,21 +164,26 @@
               <image src="projectpics/trumpy.jpg" class="picture"></image>
               <div class="profile-info">
                 <p class="profileName">Trump</p>
-                <p>Bio</p>
+                <p>
+                  I will be the greatest jobs president that God ever created.
+                </p>
               </div>
             </div>
             <div class="profile">
               <image src="projectpics/biden.jpeg" class="picture"></image>
               <div class="profile-info">
                 <p class="profileName">Biden</p>
-                <p>Bio</p>
+                <p>I shouldn't have been such a wise guy</p>
               </div>
             </div>
             <div class="profile">
               <image src="projectpics/obamna.jpeg" class="picture"></image>
               <div class="profile-info">
                 <p class="profileName">Obamna</p>
-                <p>Bio</p>
+                <p>
+                  I need you to call up cousin Pookie and say, 'Pookie, it's
+                  time to vote'.
+                </p>
               </div>
             </div>
             <div class="profile">
