fixed spelling mistake on calculator link

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="project project4">
-          <a href="https://abigjuicyburger.github.io/Calcuator/">
+          <a href="https://abigjuicyburger.github.io/Calculator/">
             <p class="title">Calculator</p>
             <p>
               One of the 3 projects that I've done so far (as of July 30 2024)
