added newest project

--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
             </p>
           </a>
         </div>
+
+        <div class="project project7">
+          <a href="https://abigjuicyburger.github.io/Library">
+            <p class="title">Library</p>
+            <p>
+              Latest project! Getting back into more complicated JS skills, the latest being object constructors and more DOM manipulation.
+            </p>
+          </a>
+          </div>
+          
       </div>
       <div class="rightSideBar">
         <div class="announcements">
