added latest TS project

--- a/index.html
+++ b/index.html
@@ -202,6 +202,18 @@
               </p>
             </a>
           </div>
+          <div class="project project13">
+            <a href="https://shopai-react.netlify.app/">
+              <p class="title">ShoppingCart App</p>
+              <p>
+                Practiced TypeScript! Had a learning curve here with routing,
+                outlets and making a smooth SPA but I like how it turned out;
+                majority of the project was spent crafting the product
+                components and wiring them all across the app but it works
+                ("fingers crossed")
+              </p>
+            </a>
+          </div>
         </section>
       </div>
       <div class="rightSideBar">
