--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@
               </p>
             </a>
           </div>
+          <div class="project project14">
+            <a href="favourable-danyelle-baderishome-9d824d53.koyeb.app">
+              <p class="title">Mini Message Board</p>
+              <p>
+                Played around with EJS, routes and controllers, some local dirty storage and some Tailwind to prettify it
+              </p>
+            </a>
+          </div>
         </section>
       </div>
       <div class="rightSideBar">
