--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </a>
           </div>
           <div class="project project14">
-            <a href="favourable-danyelle-baderishome-9d824d53.koyeb.app">
+            <a href="https://favourable-danyelle-baderishome-9d824d53.koyeb.app/">
               <p class="title">Mini Message Board</p>
               <p>
                 Played around with EJS, routes and controllers, some local dirty storage and some Tailwind to prettify it
