added new link. Restart

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <img class="logo" src="icons/homeworkicon.png" />
         <a href="#">Tasks</a>
         <img class="logo" src="icons/communityicon.png" />
-        <a href="#">Community</a>
+        <a href="https://www.theodinproject.com/">Community</a>
       </div>
       <div class="secondHalf">
         <img class="logo" src="icons/settingsicon.png" />
