Restarted again. Changed color

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Restarted November 2025. Still here -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -57,7 +58,9 @@
         <img class="logo" src="icons/homeworkicon.png" />
         <a href="#">Tasks</a>
         <img class="logo" src="icons/communityicon.png" />
-        <a href="https://www.theodinproject.com/">Community</a>
+        <a href="https://www.theodinproject.com/">
+          <span class="ocean-text"> Community</span>
+        </a>
       </div>
       <div class="secondHalf">
         <img class="logo" src="icons/settingsicon.png" />
@@ -215,10 +218,13 @@
             </a>
           </div>
           <div class="project project14">
-            <a href="https://favourable-danyelle-baderishome-9d824d53.koyeb.app/">
+            <a
+              href="https://favourable-danyelle-baderishome-9d824d53.koyeb.app/"
+            >
               <p class="title">Mini Message Board</p>
               <p>
-                Played around with EJS, routes and controllers, some local dirty storage and some Tailwind to prettify it
+                Played around with EJS, routes and controllers, some local dirty
+                storage and some Tailwind to prettify it
               </p>
             </a>
           </div>
